# bank-marketing-ml-classification

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: app.py  utils.py
models/: decision_tree.joblib  dummy_most_frequent.joblib  gradient_boosting.joblib  gradient_boosting_tuned.joblib  hist_gradient_boosting.joblib  logistic_regression.joblib
notebooks/: 01_eda_overview.ipynb  02_target_analysis.ipynb  03_feature_univariate_analysis.ipynb  04_feature_bivariate_analysis.ipynb
reports/metrics/: baseline_summary.json  boosting_models_summary.json  decision_tree_metrics.json  dummy_most_frequent_cv_metrics.json  dummy_most_frequent_metrics.json  logistic_regression_cv_metrics.json  logistic_regression_metrics.json  model_comparison.csv  random_forest_metrics.json  tree_models_summary.json
reports/metrics/baseline/: baseline_summary.json
reports/metrics/boosting/: gradient_boosting_metrics.json  gradient_boosting_tuned_metrics.json  hist_gradient_boosting_metrics.json
reports/model_cards/: model_card_v1.md  model_selection_summary.md
src/UNKNOWN.egg-info/: SOURCES.txt
src/bank_marketing_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/modeling/: boosting_models.py  compare_models.py  evaluate.py  train.py  tree_models.py  tuning.py
src/monitoring/: __init__.py  database.py  feedback_logger.py  ingestion.py
src/preprocessing/: data_split.py  pipeline.py
tests/: test_model_metrics.py  test_preprocessing.py
